--- a/www/css/mobile/trackPage.css
+++ b/www/css/mobile/trackPage.css
@@ -168,8 +168,9 @@ ul.ui-autocomplete {
 	height: 25px;
 }
 .dateBar {
+	height: 30px;
 	background-color: #f5311e;
-	padding: .1em .3em 0em .3em;
+	padding: 0.1em .3em 0.1em .3em;
 	color: #ffffff;
 	font-weight: bold;
 	text-align: center;
@@ -183,8 +184,8 @@ ul.ui-autocomplete {
 	height: 0px;
 	border-color: transparent #ffffff transparent transparent;
 	border-style: solid;
-	border-width: 5px 10px 5px 10px;
-	margin-top: 5px;
+	border-width: 14px 18px 14px 10px;
+	margin-top: 1px;
 	vertical-align: baseline;
 }
 
@@ -195,8 +196,8 @@ ul.ui-autocomplete {
 	height: 0px;
 	border-color: transparent transparent transparent #ffffff;
 	border-style: solid;
-	border-width: 5px 10px 5px 10px;
-	margin-top: 5px;
+	border-width: 14px 10px 14px 18px;
+	margin-top: 1px;
 	vertical-align: baseline;
 }
 
@@ -313,7 +314,7 @@ ul.ui-autocomplete {
 	vertical-align: top;
 	text-align: center;
 	padding-bottom: 2px;
-	margin-bottom: 3px;
+	margin-top: 6px;
 	-webkit-appearance: none;
 }
 
@@ -361,6 +362,21 @@ a:link.indicator,a:hover.indicator,a:focus.indicator,a:visited.indicator,a:activ
 
 #entry0 li.entry.ghost {
 	color: #A9A9A9;
+}
+
+#entry0 li.entry a.entryDelete {
+	margin-top: -12px;
+	margin-right: -14px;
+	padding: 14px;
+	color: #999999;
+	float: right;
+}
+
+#entry0 li.entry.ui-selected a.entryDelete {
+	margin-top: -12px;
+	margin-right: -14px;
+	padding-top: 16px;
+	padding-bottom: 16px;
 }
 
 #entry0 li.entry.ghost a.entryDelete {
